--- a/deploy/nginx/nginx.conf
+++ b/deploy/nginx/nginx.conf
@@ -20,6 +20,24 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    location /files/ {
+        proxy_pass http://backend:8000/files/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /avatars/ {
+        proxy_pass http://backend:8000/avatars/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     location /ws {
         proxy_pass http://backend:8000/ws;
         proxy_http_version 1.1;
