--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,4 @@ python-jose[cryptography]==3.5.0
 passlib[bcrypt]==1.7.4
 pydantic-settings==2.11.0
 python-multipart==0.0.20
+email-validator==2.3.0
