--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ sqlalchemy==2.0.44
 psycopg2-binary==2.9.11
 python-jose[cryptography]==3.5.0
 passlib[bcrypt]==1.7.4
+bcrypt<5
 pydantic-settings==2.11.0
 python-multipart==0.0.20
 email-validator==2.3.0
