backend: add optional R2 object storage for uploads

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -19,3 +19,11 @@ ENABLE_AUTO_SCHEMA_CREATE=false
 AVATAR_MAX_BYTES=5242880
 PROFILE_DOC_MAX_BYTES=10485760
 LIBRARY_DOC_MAX_BYTES=20971520
+
+# Optional Cloudflare R2 (S3-compatible) object storage
+# On Render free tier, configure this to persist uploads across restarts.
+R2_ENDPOINT=https://<account_id>.r2.cloudflarestorage.com
+R2_BUCKET=shr-planning-files
+R2_ACCESS_KEY_ID=replace_with_r2_access_key_id
+R2_SECRET_ACCESS_KEY=replace_with_r2_secret_access_key
+R2_REGION=auto
