Implement SMTP forgot-password and reset-password flow

--- a/.env.prod.example
+++ b/.env.prod.example
@@ -2,3 +2,14 @@ POSTGRES_USER=calendar_user
 POSTGRES_PASSWORD=change_me
 POSTGRES_DB=calendar
 RUN_MIGRATIONS_ON_START=false
+
+# SMTP password reset (backend reads these)
+SMTP_HOST=smtp.example.com
+SMTP_PORT=587
+SMTP_USERNAME=replace_with_smtp_username
+SMTP_PASSWORD=replace_with_smtp_password
+SMTP_USE_TLS=true
+SMTP_USE_SSL=false
+SMTP_FROM_EMAIL=no-reply@yourcompany.com
+FRONTEND_BASE_URL=https://calendar.yourcompany.com
+PASSWORD_RESET_TOKEN_EXPIRE_MINUTES=60
