--- a/backend/.env.example
+++ b/backend/.env.example
@@ -27,3 +27,14 @@ R2_BUCKET=shr-planning-files
 R2_ACCESS_KEY_ID=replace_with_r2_access_key_id
 R2_SECRET_ACCESS_KEY=replace_with_r2_secret_access_key
 R2_REGION=auto
+
+# SMTP password reset
+SMTP_HOST=smtp.example.com
+SMTP_PORT=587
+SMTP_USERNAME=replace_with_smtp_username
+SMTP_PASSWORD=replace_with_smtp_password
+SMTP_USE_TLS=true
+SMTP_USE_SSL=false
+SMTP_FROM_EMAIL=no-reply@yourcompany.com
+FRONTEND_BASE_URL=https://calendar.yourcompany.com
+PASSWORD_RESET_TOKEN_EXPIRE_MINUTES=60
