--- a/.env.prod.example
+++ b/.env.prod.example
@@ -4,6 +4,7 @@ POSTGRES_DB=calendar
 RUN_MIGRATIONS_ON_START=false
 
 # SMTP password reset (backend reads these)
+EMAIL_PROVIDER=smtp
 SMTP_HOST=smtp.example.com
 SMTP_PORT=587
 SMTP_USERNAME=replace_with_smtp_username
@@ -11,5 +12,12 @@ SMTP_PASSWORD=replace_with_smtp_password
 SMTP_USE_TLS=true
 SMTP_USE_SSL=false
 SMTP_FROM_EMAIL=no-reply@yourcompany.com
+
+# Brevo HTTP API password reset (use this when EMAIL_PROVIDER=brevo)
+BREVO_API_KEY=replace_with_brevo_api_key
+BREVO_API_URL=https://api.brevo.com/v3/smtp/email
+BREVO_FROM_EMAIL=no-reply@yourcompany.com
+BREVO_FROM_NAME=Smart Planning Calendar
+
 FRONTEND_BASE_URL=https://calendar.yourcompany.com
 PASSWORD_RESET_TOKEN_EXPIRE_MINUTES=60
